--- a/ximeraUserManual/introduction/computer.tex
+++ b/ximeraUserManual/introduction/computer.tex
@@ -1,4 +1,11 @@
 \documentclass[tikz]{standalone}
+\makeatletter
+\@ifundefined{bkgndcr}{
+  \usepackage{xcolor}
+  \colorlet{bkgndcr}{white}
+  \colorlet{txtcr}{black}
+}{}
+\makeatother
 \begin{document}
 \begin{tikzpicture}[rounded corners=.1pt]
     \draw (-.15,-.1) rectangle (.95,.5);
