--- a/ximeraUserManual/introduction/document.tex
+++ b/ximeraUserManual/introduction/document.tex
@@ -1,4 +1,11 @@
 \documentclass[tikz]{standalone}
+\makeatletter%%% to compile online
+\@ifundefined{bkgndcr}{
+  \usepackage{xcolor}
+  \colorlet{bkgndcr}{white}
+  \colorlet{txtcr}{black}
+}{}
+\makeatother  %%%
 \begin{document}
 \begin{tikzpicture}[rounded corners=.5pt]
 \draw[fill=bkgndcr] (0,0) -- (0,1.3) -- (.7,1.3) -- (1,1) -- (1,0) -- cycle;
