--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -10,6 +10,7 @@
 %% Where to find images
 \graphicspath{                      %% When looking for images, 
 {./}                                %% look first at your level,
+{./setup/}                          %% then in this folder,
 {./graphicsVideosAndInteractives/}  %% then in this folder,
 }
 
