--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -19,7 +19,7 @@ content:
 \begin{itemize}
   \item If you are \textbf{starting fresh}, fork the \texttt{ximeraFirstSteps}
         repository.
-  \item If you are starting with an \textbf{existing a Git repository}, that is
+  \item If you are starting with an \textbf{existing a git repository}, that is
         not currently deploying Ximera content, move files
         from \texttt{ximeraFirstSteps} to this repository.
 \end{itemize}
