--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -26,26 +26,24 @@ Ximera can
 also create online interactive activities:
 \begin{center}
     \begin{tikzpicture}
-        \node at (-1.8,.2)
-        {\resizebox{1cm}{!}{\input{document.tex}}};
+        % {\resizebox{1cm}{!}{\input{document.tex}}};   %%% FIX WITH PIC TECHNOLOGY
         \node at (-1.8,.2) {\small PDF};
-        \node at (-2,0) {\resizebox{1cm}{!}{\input{document.tex}}};
+        % \node at (-2,0) {\resizebox{1cm}{!}{\input{document.tex}}};    %%% FIX WITH PIC TECHNOLOGY
         \node at (-2,0) {\small PDF};
         
-        \node at (-2.2,-.2)
-        {\resizebox{1cm}{!}{\input{document.tex}}};
+        % \node at (-2.2,-.2){\resizebox{1cm}{!}{\input{document.tex}}};    %%% FIX WITH PIC TECHNOLOGY
         \node at (-2.2,-.2) {\small PDF};
         \draw[->] (-.6,0) -- (-1.3,0);
         \draw[->] (-.6,.3) -- (-1.3,.3);
         \draw[->] (-.6,-.3) -- (-1.3,-.3);
 
-        \node at (0,0) {\resizebox{1cm}{!}{\input{document.tex}}};
+        % \node at (0,0) {\resizebox{1cm}{!}{\input{document.tex}}};    %%% FIX WITH PIC TECHNOLOGY
         \node at (0,0) {\LaTeX};
         \draw[->] (.6,0) -- (1.4,0);
 
         \node at (2,0) {\resizebox{1cm}{!}{\input{server.tex}}};
         \draw[->] (2.6,0) -- (3.4,0);
-        \node at (4,0) {\resizebox{1cm}{!}{\input{computer.tex}}};
+        % \node at (4,0) {\resizebox{1cm}{!}{\input{computer.tex}}};     %%% FIX WITH PIC TECHNOLOGY
         
         \node[anchor=north] at (-2,-.8) {Various};
         \node[anchor=north] at (-2,-1.2) {PDFs};
