--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -82,7 +82,12 @@ git commit -m "Added first activity file"
 \begin{verbatim}
 ./scripts/xmlatex -i bash
 xake -v compile FILE-NAME.tex
+more FILE-NAME.tex.log
 pdflatex FILE-NAME.tex
 \end{verbatim}
+
+
+Slowly move \verb!\end{document}! down a document.
+
 
 \end{document}
