--- a/ximeraUserManual/coverArt/backCover.tex
+++ b/ximeraUserManual/coverArt/backCover.tex
@@ -24,19 +24,19 @@
     \begin{tikzpicture}
         \node at (-1.8,.2)
         {\resizebox{1cm}{!}{\input{document.tex}}};
-        \node at (-1.8,.2) {\small PDF};
+        \node at (-1.85,.2) {\small PDF};
         \node at (-2,0) {\resizebox{1cm}{!}{\input{document.tex}}};
-        \node at (-2,0) {\small PDF};
+        \node at (-2.05,0) {\small PDF};
         
         \node at (-2.2,-.2)
         {\resizebox{1cm}{!}{\input{document.tex}}};
-        \node at (-2.2,-.2) {\small PDF};
+        \node at (-2.25,-.2) {\small PDF};
         \draw[->] (-.6,0) -- (-1.3,0);
         \draw[->] (-.6,.3) -- (-1.3,.3);
         \draw[->] (-.6,-.3) -- (-1.3,-.3);
 
         \node at (0,0) {\resizebox{1cm}{!}{\input{document.tex}}};
-        \node at (0,0) {\LaTeX};
+        \node at (0,-.05) {\LaTeX};
         \draw[->] (.6,0) -- (1.4,0);
 
         \node at (2,0) {\resizebox{1cm}{!}{\input{server.tex}}};
