--- a/ximeraUserManual/introduction/computer.tex
+++ b/ximeraUserManual/introduction/computer.tex
@@ -1,12 +1,12 @@
-\documentclass[tikz]{standalone}
-\makeatletter%%% to compile online
-\@ifundefined{bkgndcr}{
-  \usepackage{xcolor}
-  \colorlet{bkgndcr}{white}
-  \colorlet{txtcr}{black}
-}
-\makeatother  %%%
-\begin{document}
+% \documentclass[tikz]{standalone}
+% \makeatletter%%% to compile online
+% \@ifundefined{bkgndcr}{
+%   \usepackage{xcolor}
+%   \colorlet{bkgndcr}{white}
+%   \colorlet{txtcr}{black}
+% }
+% \makeatother  %%%
+% \begin{document}
 \begin{tikzpicture}[rounded corners=.1pt]
     \draw (-.15,-.1) rectangle (.95,.5);
     \draw[fill=bkgndcr] (0,0) rectangle (1,.8);
@@ -14,10 +14,10 @@
     cycle;
     \draw (0,.8) -- (-.2,.9);
     \draw[fill=bkgndcr] (0,-.05) -- (1,-.05) -- (1,-.25) -- (0,-.25) -- cycle;
-    \draw[fill=bkgndcr] (0,-.05) -- (0,-.25) -- (-.2,-.15) -- (-.2,.05) -- cycle;
+    \draw[fill=bkgndcr] (0,-.05) -- (0,-.25) -- (-.2,-.15) -- (-.2,.05) -- cycle;S
     \draw[rounded corners=.5pt,fill=txtcr!50!bkgndcr] (.1,.1) rectangle  (.9,.7);
     \draw (-.2,-.25) -- (1.1,-.25) -- (1.2,-.37) -- (-.1,-.37) -- cycle;
     \draw (-.2,-.25) -- (-.2,-.3) -- (-.1,-.4) -- (-.1,-.37) -- cycle;
     \draw (-.1,-.4) rectangle (1.2,-.37);
 \end{tikzpicture}
-\end{document}
+% \end{document}
