--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -20,10 +20,8 @@ content, such as textbooks, assessments, and online courses.
 machines and GitHub repositories.
 Authors own their content and decide how to license their content. From a
 single source written in \LaTeX, Ximera generates various output: PDF
-worksheets,
-PDF textbooks, and	PDF solution manuals, and so on. Of most interest,
-Ximera can
-also create online interactive activities:
+worksheets, PDF textbooks, and	PDF solution manuals, and so on. Of most interest,
+Ximera can also create online interactive activities:
 \begin{center}
     \begin{tikzpicture}
         \node at (-1.8,0) {\resizebox{1cm}{!}{\input{document.tex}}};   %%% FIX WITH PIC TECHNOLOGY
