--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -66,7 +66,7 @@ URL or an assignment in their LMS.
 or developer. To get started with Ximera, visit our
 \textit{First Steps in Ximera} GitHub repository:
 \begin{center}
-    \qrcode{https://go.osu.edu/xfs}\\
+    % \qrcode{https://go.osu.edu/xfs}\\
     \small\url{https://go.osu.edu/xfs}
 \end{center}
 \textbf{This document assumes you have completed the instructions there, and
@@ -84,7 +84,7 @@ Department of Mathematics, and the Affordable Learning Exchange at OSU.
 As a token of our appreciation, \textbf{consider applying for a Ximera
     Flash-Grant Stipend:}
 \begin{center}
-    \qrcode{https://go.osu.edu/ximera-flash-grant}\\
+    % \qrcode{https://go.osu.edu/ximera-flash-grant}\\
     \small\url{https://go.osu.edu/ximera-flash-grant}
 \end{center}
 Thank you for your interest in Ximera. We encourage you to contact the
