--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -22,7 +22,7 @@ Authors own their content and decide how to license their content. From a
 single source written in \LaTeX, Ximera generates various output: PDF
 worksheets, PDF textbooks, and	PDF solution manuals, and so on. Of most interest,
 Ximera can also create online interactive activities:
-\begin{center}
+\begin{image}
     \begin{tikzpicture}
         %\node at (-1.8,0) {\resizebox{1cm}{!}{\input{document.tex}}};   %%NOT SHOWING UP ONLINE!
         \node at (-1.8,.2) {\small PDF};
@@ -56,7 +56,7 @@ Ximera can also create online interactive activities:
         \node[anchor=north] at (4,-.8) {Students};
         \node[anchor=north] at (4,-1.2) {Engage};
     \end{tikzpicture}
-\end{center}
+\end{image}
 The source code used to produce PDFs can also create interactive online
 activities when deployed to a Ximera server. Students access this content via a
 URL or an assignment in their LMS.
