--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -350,7 +350,7 @@ Once you have your preamble, all Ximera files need to be able to access it.
 In this diagram, we attempt to show how one should modify the inputs of the
 preamble based on the directory structure.
 
-\subsection{Graphics paths}
+\paragraph{Graphics paths}
 
 Perhaps the easiest way to include graphics in Ximera documents is with
 \verb!\includegraphics! via
@@ -420,7 +420,7 @@ reality we did!) this
 to our preamble, then when compiling \verb!aFirstStepInXimera.tex!, the
 compiler will know where to look.
 
-\subsection{Input paths}
+\paragraph{Input paths}
 
 Just like with images, sometimes you need to load other files.
 This is less common use case, but we'll mention it here. For this document, we
