--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -31,6 +31,7 @@
 
 
 \newif\ifcolor %% for color cover
+\colorlet{bkgndcr}{white}
 
 \usepackage{qrcode} %% For QR Codes
 \usepackage[normalem]{ulem} % for strikeout
