--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -32,6 +32,7 @@
 
 \newif\ifcolor %% for color cover
 \colorlet{bkgndcr}{white}
+\colorlet{txtcr}{black}
 
 \usepackage{qrcode} %% For QR Codes
 \usepackage[normalem]{ulem} % for strikeout
