--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -331,6 +331,11 @@ P_2:  \quad  4x-2y+6z &= 5 \\
 P_3:  \quad  5x+2y+z &=7 \\
 \end{array}
 \]
+\begin{align*}
+P_1:  \quad 4&= 2x-y+3z  \\
+P_2:  \quad  5&=4x-2y+6z\\ 
+P_3:  \quad  7&=5x+2y+z
+\end{align*}
  Describe the relationships between the planes $P_1$, $P_2$, and $P_3$ in terms of ``parallel,'' ``orthogonal,'' or ``neither.''
  \begin{enumerate}
    \item The planes $P_1$ and $P_2$ are \wordChoice{\choice[correct]{parallel}\choice{orthogonal}\choice{neither parallel nor orthogonal}}.
